<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/edit_text_margin_start"
    android:layout_marginTop="@dimen/margin_top"
    android:layout_marginEnd="@dimen/edit_text_margin_end"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/text_30_sec"
            android:textSize="@dimen/edit_text_size_text" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/text_1_min"
            android:textSize="@dimen/edit_text_size_text" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/text_1_h"
            android:textSize="@dimen/edit_text_size_text" />
    </RadioGroup>

    <EditText

        android:id="@+id/edit_text_fist_name"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/edit_text_hint_fist_name"
        android:inputType="text"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:textColor="@color/black"
        android:textSize="@dimen/edit_text_size_text" />

    <EditText
        android:id="@+id/edit_text_last_name"
        style="@android:style/Widget.DeviceDefault.EditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/edit_text_style"
        android:ems="10"
        android:hint="@string/edit_text_hint_last_name"
        android:inputType="text"
        android:paddingStart="@dimen/padding_start"
        android:paddingEnd="@dimen/padding_end"
        android:textColor="@color/black"
        android:textSize="@dimen/edit_text_size_text" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/button_text_save"
        android:textSize="@dimen/button_size_text" />

</LinearLayout>